feat: added quotes handler
